--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,106 @@
-/* You can add global styles to this file, and also import other style files */
+///* You can add global styles to this file, and also import other style files */
+body{
+  font-family: Roboto, "sans-serif";
+  margin: 0;
+}
+//
+//  * {
+//    margin: 0;
+//    box-sizing: border-box;
+//  }
+//
+//
+//.container{
+//  width: 100%;
+//  padding: 8px;
+//  display: grid;
+//  //grid-template-columns: 80% 20%;
+//  //grid-template-rows: auto auto;
+//  gap: 4px;
+//  align-items: center;
+//  grid-template-areas:
+//"a a a a a a a a b b b b"
+//"c c c c c c c c c c c c";
+//}
+//
+//.header{
+//  background: aqua;
+//  width: 100%;
+//  height: 200px;
+//  font-size: 24px;
+//  font-weight: bold;
+//  text-align: center;
+//  align-content: center;
+//  //grid-column: 1 / 3;
+//  grid-area: a;
+//}
+//
+//.button{
+//  font-size: 18px;
+//  font-weight: bold;
+//  height: 50px;
+//  border-radius: 50px;
+//  background: burlywood;
+//  //grid-column: 2 / 3;
+//  grid-area:b;
+//}
+//
+//.content{
+//  //grid-column: 1 / 3;
+//  //grid-row: 2 / 3;
+//  padding: 20px;
+//  grid-area:c
+//}
+//
+//@media (max-width: 768px) {
+//  .container {
+//    grid-template-areas:
+//"a a a a a a a a a a a a"
+//"c c c c c c c c b b b b ";
+//  }
+//
+//  .header {
+//
+//  }
+//
+//  .content {
+//
+//  }
+//
+//  .button {
+//
+//  }
+//}
+//
+//.container2{
+//  width: 100%;
+//  padding: 15px;
+//  display: grid;
+//  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)) ;
+//  //grid-template-rows: auto auto;
+//  gap: 15px;
+//  align-items: center;
+//}
+//
+//
+//.item{
+//  background: aqua;
+//  padding: 8px;
+//  box-sizing: border-box;
+//  width: 100%;
+//  height: 150px;
+//  font-size: 24px;
+//  font-weight: bold;
+//  text-align: center;
+//  align-content: center;
+//}
+//
+//@media(max-width: 768px){
+//  .container2{
+//    display: flex;
+//    flex-wrap: wrap;
+//    flex-direction: column;
+//    align-items: stretch;
+//  }
+//}
+//
