--- a/src/app/website/about/about.component.scss
+++ b/src/app/website/about/about.component.scss
@@ -12,14 +12,21 @@
   line-height: 80px;
   font-size: 72px;
   font-weight: 300;
+  gap: 60px
 }
 
 .section-one span{
   font-weight: 700;
 }
 
+.section-two{
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
 .images{
-  margin-top: 30px;
+  //margin-top: 50px;
 }
 
 a {
@@ -34,7 +41,7 @@ a {
 }
 
 .button{
-  margin: 30px 0 60px;
+  width: 180px;
   text-transform: uppercase;
   border: 1px solid black;
   padding: 10px 45px;
