add before pseudoclass

--- a/src/app/website/about/about.component.html
+++ b/src/app/website/about/about.component.html
@@ -1,9 +1,9 @@
 <div class="flex-container">
-  <div class="section-one">
+  <h2 class="section-one">
     <div>i am <span>developer</span></div>
     <img src="https://images03.nicepage.com/c461c07a441a5d220e8feb1a/04175ff1b3bf5f11a20c0152/a9dcc2d3-077b-4cbf-35f1-05a7ca2b6438.jpg?version=" width="545" height="590"/>
 
-  </div>
+  </h2>
   <div class="section-two">
       <img src="https://images03.nicepage.com/c461c07a441a5d220e8feb1a/75f097b361975b92a095e949/ret-min.jpg" width="545" height="610"/>
     <div class="images">
@@ -12,4 +12,5 @@
     <button class="button">read more</button>
   </div>
 </div>
+
 
