--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -8,6 +8,7 @@
   background: coral;
   padding: 20px;
   text-align: center;
+  color: white;
 }
 
 .links {
@@ -20,12 +21,11 @@
 .links a{
   text-decoration: none;
   font-size: 16px;
-  color: #171f2c;
+  color: white;
 }
 
 .links a:hover{
   text-decoration: none;
-  color: coral;
 }
 
 .card{
