added route for new website

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,6 +5,7 @@
   <div class="links">
     <a routerLink="/grid" class="card">Grid</a>
     <a routerLink="/website" class="card">Website</a>
+    <a routerLink="/dopetrope" class="card">html5up.net/dopetrope</a>
   </div>
 </div>
 
