--- a/src/app/dopetrope/dopetrope.component.scss
+++ b/src/app/dopetrope/dopetrope.component.scss
@@ -1,4 +1,6 @@
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900,300italic");
 .container {
+  font-family: 'Source Sans Pro', sans-serif;
   margin: 0;
   box-sizing: border-box;
 }
