--- a/src/app/dopetrope/dope-header/dope-header.component.html
+++ b/src/app/dopetrope/dope-header/dope-header.component.html
@@ -1,14 +1,25 @@
 <header id="header">
   <h1 class="header-title">Dopetrope</h1>
-  <nav class="nav">
-    <ul>
+  <nav id="nav">
+    <ul class="menu">
       <li><a routerLink="/dopetrope">Home</a></li>
-      <li>
-        <a href="#" (click)="toggleMenu($event)"> Dropdown</a>
+      <li (mouseenter)="showMenu()"
+          (mouseleave)="hideMenu()"
+          (click)="toggleMenu($event)">
+        <a href="#"> Dropdown</a>
         <ul class="sub-menu" [ngClass]="{'show': isMenuVisible}">
           <li>Menu 1</li>
           <li>Menu 2</li>
           <li>Menu 3</li>
+          <li>
+            Menu 4
+            <ul class="sub-inner-menu">
+              <li>Menu 1</li>
+              <li>Menu 2</li>
+              <li>Menu 3</li>
+            </ul>
+          </li>
+          <li>Menu 5</li>
         </ul>
       </li>
       <li><a routerLink="/dopetrope/left-sidebar">Left Side</a></li>
