--- a/src/app/dopetrope/dope-header/dope-header.component.scss
+++ b/src/app/dopetrope/dope-header/dope-header.component.scss
@@ -1,6 +1,7 @@
 #header{
   background: #ffffff;
   text-align: center;
+  margin: 80px 0 60px 0
 }
 
 .header-title{
@@ -9,10 +10,74 @@
   font-weight: 900;
   letter-spacing: -1.4px;
 }
-.sub-menu{
-  display: none;
+
+
+.menu {
+  list-style: none;
 }
+
+.menu a{
+  text-decoration: none;
+}
+
+.menu li {
+  display: inline-block;
+}
+
+.sub-menu{
+  display: block;
+  position: absolute;
+  background: #252122;
+  width: 100px;
+  border-radius: 5px;
+  padding: 1.25em 1.5em 1.25em 1.5em;
+  font-style: italic;
+  min-width: 13em;
+  box-shadow: 0px 8px 15px 0px rgba(0, 0, 0, 0.5);
+  text-align: left;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  list-style: none;
+}
+
+.submenu::before{
+  content: '';
+  display: block;
+  position: absolute;
+  left: 50%;
+  margin-left: -10px;
+  top: -9px;
+  border-left: solid 10px transparent;
+  border-right: solid 10px transparent;
+  border-bottom: solid 10px #252122;
+  border-bottom-color: rgba(34, 30, 31, 0.98);
+}
+
+.sub-menu li{
+  display: block;
+  color: #aaaaaa;
+  padding: 4px 0 4px 0;
+  cursor: pointer;
+}
+.sub-menu li:hover{
+  color: white;
+}
+
 .sub-menu.show{
   display: block;
+}
+
+.dropotron {
+  border-radius: 5px;
+  background-color: #252122;
+  background-color: rgba(34, 30, 31, 0.98);
+  padding: 1.25em 1.5em 1.25em 1.5em;
+  font-style: italic;
+  min-width: 13em;
+  box-shadow: 0px 8px 15px 0px rgba(0, 0, 0, 0.5);
+  text-align: left;
+  margin-top: -1.25em;
+  margin-left: -1px;
+  list-style: none;
 }
 
