--- a/src/app/dopetrope/dopetrope-home/dopetrope-home.component.html
+++ b/src/app/dopetrope/dopetrope-home/dopetrope-home.component.html
@@ -1,3 +1,6 @@
-<div class="home-container">
-
+<div class="banner-container">
+  <div class="banner">
+    <h1>Howdy. This is Dopetrope.</h1>
+    <p>A responsive template by HTML5 UP</p>
+  </div>
 </div>
