styling services component

--- a/src/app/dopetrope/dope-services/dope-services.component.html
+++ b/src/app/dopetrope/dope-services/dope-services.component.html
@@ -1,21 +1,32 @@
 <div id="services" class="container">
-  <div class="grid-row">
+  <div class="grid">
 
       <div class="service">
         <section class="first">
-          1
-          <i class="fa fa-camera-retro"></i> fa-camera-retro
+          <div class="icon one">
+            icon
+          </div>
+          <h2 class="title">Ipsum consequat</h2>
+          <p class="description">Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
         </section>
-
       </div>
       <div class="service" >
         <section class="second">
-          2
+          <div class="icon two">
+            icon
+          </div>
+          <h2 class="title">Magna etiam dolor</h2>
+          <p class="description">Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
         </section>
       </div>
       <div class="service">
         <section class="third">
-          3
+          <div class="icon three">
+            <i class="fa fa-camera-retro"></i>dd
+            icon
+          </div>
+          <h2 class="title">Tempus adipiscing</h2>
+          <p class="description">Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
         </section>
       </div>
 
