--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,5 +10,8 @@ body{
   }
 
   :root{
-    --main-red: #d32a3f
+    --main-red: #d32a3f;
+    --main-dark-gray: #242122;
+    --main-light-gray: #827a7c;
+    --services-color: #5d5d5d
   }
