--- a/src/app/dopetrope/dope-services/dope-services.component.scss
+++ b/src/app/dopetrope/dope-services/dope-services.component.scss
@@ -1,15 +1,69 @@
 .container{
-
+width: 70%;
 }
-.grid-row{
+.grid{
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 2px;
 }
 .service {
   text-align: center;
   position: relative;
-  margin-top: 30px;
+  margin: 40px 0;
+  padding: 40px 0;
+}
+
+.service .title{
+  margin-top: 4.5rem;
+  margin-bottom: 20px;
+}
+
+.icon{
+  color: #fff;
+  width: 9rem;
+  margin: 0 auto;
+  position: relative;
+  background: var(--main-red);
+  padding: 1.75em 0 0.75em 0;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.icon.two {
+  background: var(--main-dark-gray);
+}
+
+.icon.three::after{
+  border-top: solid 2em var(--main-light-gray);
+}
+
+.icon.three {
+  background: var(--main-light-gray);
+}
+
+.icon.two::after{
+  border-top: solid 2em var(--main-dark-gray);
+}
+
+.icon::before{
+  font-size: 4.5em;
+  line-height: 1em;
+  color: #fff;
+}
+
+.icon::after{
+  content: '';
+  position: absolute;
+  bottom: -1.95em;
+  left: 0;
+  border-top: solid 2em #d52349;
+  border-left: solid 4.5em transparent;
+  border-right: solid 4.5em transparent;
+}
+
+.service section{
+  text-align: center;
+  //background: yellow;
 }
 
 #services .second::before{
@@ -34,4 +88,13 @@
   display: block;
   z-index: -1;
   box-shadow: -32px 0 0 0 #fff, 0 -32px 0 0 #fff, 0 32px 0 0 #fff, -32px 32px 0 0 #fff, -32px -32px 0 0 #fff, 0 0 32px 0 rgba(0, 0, 0, 0.15);
+}
+
+
+
+.description{
+  margin: 0 auto;
+  width: 330px;
+  font-weight: 300;
+  color: var(--services-color);
 }
