services component added action buttons

--- a/src/app/dopetrope/dope-services/dope-services.component.html
+++ b/src/app/dopetrope/dope-services/dope-services.component.html
@@ -33,4 +33,9 @@
 
   </div>
 
+  <div class="actions">
+    <button class="btn1">Get Started</button>
+    <button class="btn2">Learn More</button>
+  </div>
+
 </div>
