--- a/src/app/dopetrope/dope-services/dope-services.component.scss
+++ b/src/app/dopetrope/dope-services/dope-services.component.scss
@@ -91,11 +91,47 @@
   box-shadow: -32px 0 0 0 #fff, 0 -32px 0 0 #fff, 0 32px 0 0 #fff, -32px 32px 0 0 #fff, -32px -32px 0 0 #fff, 0 0 32px 0 rgba(0, 0, 0, 0.15);
 }
 
-
-
 .description{
   margin: 0 auto;
   width: 330px;
   font-weight: 300;
   color: var(--services-color);
+}
+
+.actions{
+  text-align: center;
+  margin: 40px 0;
+}
+
+.btn1{
+  margin-right: 16px;
+  min-width: 280px;
+  padding: 18px 36px;
+  background: var(--services-action-warning);
+  color: #fff;
+  border-radius: 5px;
+  border: none;
+  font-size: 24px;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.btn1:hover{
+  background: var(--services-action-warning-hover);
+}
+
+.btn2{
+  min-width: 280px;
+  padding: 18px 36px;
+  background: var(--services-action-black);
+  color: #fff;
+  border-radius: 5px;
+  border: none;
+  font-size: 24px;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.btn2:hover{
+  background: var(--services-action-black-hover);
 }
