--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,5 +13,9 @@ body{
     --main-red: #d32a3f;
     --main-dark-gray: #242122;
     --main-light-gray: #827a7c;
-    --services-color: #5d5d5d
+    --services-color: #5d5d5d;
+    --services-action-warning: #d42b48;
+    --services-action-warning-hover: #eb365e;
+    --services-action-black: #252122;
+    --services-action-black-hover: #353132;
   }
