--- a/src/app/dopetrope/drope-portfolio/drope-portfolio.component.html
+++ b/src/app/dopetrope/drope-portfolio/drope-portfolio.component.html
@@ -4,9 +4,7 @@
   </header>
   <div class="projects">
     <div class="project">
-      <div class="image">
-        <img src="assets/images/dope/pic02.jpg">
-      </div>
+      <img class="image" src="assets/images/dope/pic02.jpg">
       <div class="description">
         <h2>Ipsum feugiat et dolor</h2>
         <p>
@@ -20,9 +18,7 @@
       </div>
     </div>
     <div class="project">
-      <div class="image">
-        <img src="assets/images/dope/pic03.jpg">
-      </div>
+      <img class="image" src="assets/images/dope/pic03.jpg">
       <div class="description">
         <h2>Sed etiam lorem nulla</h2>
         <p>
@@ -36,9 +32,7 @@
       </div>
     </div>
     <div class="project">
-      <div class="image">
-        <img src="assets/images/dope/pic04.jpg">
-      </div>
+      <img class="image" src="assets/images/dope/pic04.jpg">
       <div class="description">
         <h2>Consequat et tempus</h2>
         <p>
@@ -52,9 +46,7 @@
       </div>
     </div>
     <div class="project">
-      <div class="image">
-        <img src="assets/images/dope/pic05.jpg">
-      </div>
+      <img class="image" src="assets/images/dope/pic05.jpg">
       <div class="description">
         <h2>Blandit sed adipiscing</h2>
         <p>
@@ -68,9 +60,7 @@
       </div>
     </div>
     <div class="project">
-      <div class="image">
-        <img src="assets/images/dope/pic06.jpg">
-      </div>
+      <img class="image" src="assets/images/dope/pic06.jpg">
       <div class="description">
         <h2>Etiam nisl consequat</h2>
         <p>
@@ -84,9 +74,7 @@
       </div>
     </div>
     <div class="project">
-      <div class="image">
-        <img src="assets/images/dope/pic07.jpg">
-      </div>
+      <img class="image" src="assets/images/dope/pic07.jpg">
       <div class="description">
         <h2>Dolore nisl feugiat</h2>
         <p>
