--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,4 +18,6 @@ body{
     --services-action-warning-hover: #eb365e;
     --services-action-black: #252122;
     --services-action-black-hover: #353132;
+    --footer-text-color: #858484;
+    --footer-link: #c5c4c4;
   }
