--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,4 +20,5 @@ body{
     --services-action-black-hover: #353132;
     --footer-text-color: #858484;
     --footer-link: #c5c4c4;
+    --main-light-gray-075: rgba(150, 150, 150, 0.75)
   }
