--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ body{
   }
 
   :root{
-    --main-red: #d32a3f;
+    --main-red: #d52349;
     --main-dark-gray: #242122;
     --main-light-gray: #827a7c;
     --services-color: #5d5d5d;
@@ -20,5 +20,6 @@ body{
     --services-action-black-hover: #353132;
     --footer-text-color: #858484;
     --footer-link: #c5c4c4;
-    --main-light-gray-075: rgba(150, 150, 150, 0.75)
+    --main-light-gray-075: rgba(150, 150, 150, 0.75);
+    --banner-bg-color-075: rgba(36, 33, 34, 0.97)
   }
