--- a/src/app/dopetrope/dope-services/dope-services.component.scss
+++ b/src/app/dopetrope/dope-services/dope-services.component.scss
@@ -141,14 +141,20 @@
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 320px) and (max-width: 767px) {
-
+.container{
+  margin: 0 20px;
+}
 
   .btn1{
     width: 100%;
     margin-bottom: 15px;
+    font-size: 16px;
+    padding: 10px 24px;
   }
   .btn2{
     width: 100%;
+    font-size: 16px;
+    padding: 10px 24px;
   }
 }
 
