footer section implementation and styling

--- a/src/app/dopetrope/drope-footer/drope-footer.component.html
+++ b/src/app/dopetrope/drope-footer/drope-footer.component.html
@@ -66,4 +66,47 @@
       </div>
     </div>
   </section>
+  <section>
+    <div class="second-section-container">
+      <div class="left-container">
+        <div class="first">
+          <div class="second-section-title">
+            Tempus consequat
+          </div>
+            <ul class="list">
+              <li class="list-item"><a href="#">Lorem ipsum dolor sit amet sit veroeros</a></li>
+              <li class="list-item"><a href="#">Sed et blandit consequat sed tlorem blandit</a></li>
+              <li class="list-item"><a href="#">Adipiscing feugiat phasellus sed tempus</a></li>
+              <li class="list-item"><a href="#">Hendrerit tortor vitae mattis tempor sapien</a></li>
+              <li class="list-item"><a href="#">Sem feugiat sapien id suscipit magna felis nec</a></li>
+              <li class="list-item"><a href="#">Elit class aptent taciti sociosqu ad litora</a></li>
+            </ul>
+        </div>
+        <div class="second">
+          <div class="second-section-title">
+            Ipsum et phasellus
+          </div>
+          <ul class="list">
+            <li class="list-item"><a href="#">Lorem ipsum dolor sit amet sit veroeros</a></li>
+            <li class="list-item"><a href="#">Sed et blandit consequat sed tlorem blandit</a></li>
+            <li class="list-item"><a href="#">Adipiscing feugiat phasellus sed tempus</a></li>
+            <li class="list-item"><a href="#">Hendrerit tortor vitae mattis tempor sapien</a></li>
+            <li class="list-item"><a href="#">Sem feugiat sapien id suscipit magna felis nec</a></li>
+            <li class="list-item"><a href="#">Elit class aptent taciti sociosqu ad litora</a></li>
+          </ul>
+        </div>
+      </div>
+
+
+
+      <div class="right-container">
+        <div class="third">
+          <div class="second-section-title">
+            Vitae tempor lorem
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
 </footer>
