--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,5 +21,6 @@ body{
     --footer-text-color: #858484;
     --footer-link: #c5c4c4;
     --main-light-gray-075: rgba(150, 150, 150, 0.75);
-    --banner-bg-color-075: rgba(36, 33, 34, 0.97)
+    --banner-bg-color-075: rgba(36, 33, 34, 0.97);
+    --footer-border-color: rgba(255, 255, 255, 0.05);
   }
