--- a/src/app/dopetrope/drope-footer/drope-footer.component.html
+++ b/src/app/dopetrope/drope-footer/drope-footer.component.html
@@ -104,9 +104,44 @@
           <div class="second-section-title">
             Vitae tempor lorem
           </div>
+          <div class="social">Social media icons</div>
+          <div class="contact-details">
+            <div class="contact-row">
+              <div class="label">Address</div>
+              <div class="value">
+                <p>
+                  Untitled Incorporated
+                  <br>
+                  1234 Somewhere Road Suite
+                  <br>
+                  Nashville, TN 00000-0000
+                </p>
+              </div>
+            </div>
+
+            <div class="contact-row">
+              <div class="label">Mail</div>
+              <div class="value">
+                <p>example&#64;gmail.com</p>
+              </div>
+            </div>
+
+            <div class="contact-row">
+              <div class="label">Phone</div>
+              <div class="value">
+                <p>(800) 000-0000</p>
+              </div>
+            </div>
+
+          </div>
         </div>
       </div>
 
     </div>
+  </section>
+  <section class="copyrights-container">
+    <span class="copyright">&copy; All rights reserved</span>
+    <span class="design-by">Design: me</span>
+    <span class="design-by">Demo Images: Dreametry Doodle</span>
   </section>
 </footer>
