add font awesome and implement service responsive

--- a/src/app/dopetrope/dope-services/dope-services.component.html
+++ b/src/app/dopetrope/dope-services/dope-services.component.html
@@ -4,7 +4,7 @@
       <div class="service">
         <section class="first">
           <div class="icon one">
-            icon
+            <fa-icon [icon]="faCog"></fa-icon>
           </div>
           <h2 class="title">Ipsum consequat</h2>
           <p class="description">Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
@@ -13,7 +13,7 @@
       <div class="service" >
         <section class="second">
           <div class="icon two">
-            icon
+            <fa-icon [icon]="faBolt"></fa-icon>
           </div>
           <h2 class="title">Magna etiam dolor</h2>
           <p class="description">Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
@@ -22,8 +22,7 @@
       <div class="service">
         <section class="third">
           <div class="icon three">
-            <i class="fa fa-camera-retro"></i>dd
-            icon
+            <fa-icon [icon]="faStar"></fa-icon>
           </div>
           <h2 class="title">Tempus adipiscing</h2>
           <p class="description">Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
