--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,7 @@ body{
     --services-action-warning-hover: #eb365e;
     --services-action-black: #252122;
     --services-action-black-hover: #353132;
+    --service-border-bottom: #dfdfdf;
     --footer-text-color: #858484;
     --footer-link: #c5c4c4;
     --main-light-gray-075: rgba(150, 150, 150, 0.75);
