--- a/src/app/dopetrope/dope-services/dope-services.component.scss
+++ b/src/app/dopetrope/dope-services/dope-services.component.scss
@@ -6,7 +6,8 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2px;
-  width: 100%;
+  width: 70em;
+  margin: 0 auto;
 }
 .service {
   text-align: center;
@@ -25,10 +26,20 @@
   width: 9rem;
   margin: 0 auto;
   position: relative;
-  background: var(--main-red);
   padding: 1.75em 0 0.75em 0;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
+}
+ fa-icon {
+  font-size: 62px;
+}
+
+.icon.one{
+  background: var(--main-red);
+}
+
+.icon.one::after{
+  border-top: solid 2em var(--main-red);
 }
 
 .icon.two {
@@ -58,7 +69,6 @@
   position: absolute;
   bottom: -1.95em;
   left: 0;
-  border-top: solid 2em #d52349;
   border-left: solid 4.5em transparent;
   border-right: solid 4.5em transparent;
 }
@@ -162,17 +172,25 @@
 @media only screen and (min-width: 768px) and (max-width: 992px) {
 
 }
-// screens 992px and smaller
-//@media only screen and (max-width: 992px) {
-//
-//}
 
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-
+@media screen and (max-width: 1280px) {
+  .grid {
+    width: calc(100% - 60px);
+  }
+  .service {
+    border-bottom: 1px solid var(--service-border-bottom);
+  }
+  .service:last-child {
+    border-bottom: none;
+  }
+  .service .description{
+    width: 100%;
+  }
 }
 
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-
+@media only screen and (max-width: 992px) {
+  .grid {
+    width: calc(100% - 80px);
+    display: block;
+  }
 }
