--- a/src/app/dopetrope/drope-portfolio/drope-portfolio.component.scss
+++ b/src/app/dopetrope/drope-portfolio/drope-portfolio.component.scss
@@ -4,7 +4,7 @@
   background-color: #f7f7f7;
 }
 header{
-  max-width: 1350px;
+  width: 70em;
   margin: 0 auto;
   padding-bottom: 50px;
 }
@@ -36,7 +36,7 @@ header h2:after{
 }
 
 .projects{
-  max-width: 1350px;
+  width: 70em;
   margin: 0 auto;
   display: grid;
   padding: 0 20px;
@@ -86,6 +86,12 @@ header h2:after{
 
 .btn2:hover{
   background: var(--services-action-black-hover);
+}
+
+@media only screen and (max-width: 1280px){
+  header, .projects{
+    width: calc(100% - 60px);
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 992px) {
