--- a/src/app/dopetrope/drope-blog/drope-blog.component.html
+++ b/src/app/dopetrope/drope-blog/drope-blog.component.html
@@ -19,8 +19,8 @@
         </p>
       </div>
       <div class="actions">
-        <button class="btn1">Continue Reading</button>
-        <button class="btn2">33 comments</button>
+        <button class="btn1"><fa-icon [icon]="faFileAlt"></fa-icon> Continue Reading</button>
+        <button class="btn2"><fa-icon [icon]="faComment"></fa-icon> 33 comments</button>
       </div>
     </div>
     <div class="blog">
@@ -39,8 +39,8 @@
         </p>
       </div>
       <div class="actions">
-        <button class="btn1">Continue Reading</button>
-        <button class="btn2">33 comments</button>
+        <button class="btn1"><fa-icon [icon]="faFileAlt"></fa-icon> Continue Reading</button>
+        <button class="btn2"><fa-icon [icon]="faComment"></fa-icon> 33 comments</button>
       </div>
     </div>
   </div>
